Refactored Order Controller, Service, Dto